[tool.poetry]
name = "rushdb"
version = "1.5.1"
description = "RushDB Python SDK"
authors = ["RushDB Team <hi@rushdb.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/rush-db/rushdb-python"
repository = "https://github.com/rush-db/rushdb-python"
documentation = "https://docs.rushdb.com"
packages = [{ include = "rushdb", from = "src" }]
keywords = [
    "database",
    "graph database",
    "instant database",
    "instant-database",
    "instantdatabase",
    "instant db",
    "instant-db",
    "instantdb",
    "neo4j",
    "cypher",
    "ai",
    "ai database",
    "etl",
    "data-pipeline",
    "data science",
    "data-science",
    "data management",
    "data-management",
    "machine learning",
    "machine-learning",
    "persistence",
    "db",
    "graph",
    "graphs",
    "graph-database",
    "self-hosted",
    "rush-db",
    "rush db",
    "rushdb"
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.280"
mypy = "^1.4.1"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
types-requests = "^2.31.0.1"
types-python-dateutil = "^2.8.19.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120