[project]
name = "rushdb"
version = "1.8.0"
description = "RushDB Python SDK"
authors = [
    {name = "RushDB Team", email = "hi@rushdb.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "database",
    "graph database",
    "instant database",
    "instant-database",
    "instantdatabase",
    "instant db",
    "instant-db",
    "instantdb",
    "neo4j",
    "cypher",
    "ai",
    "ai database",
    "etl",
    "data-pipeline",
    "data science",
    "data-science",
    "data management",
    "data-management",
    "machine learning",
    "machine-learning",
    "persistence",
    "db",
    "graph",
    "graphs",
    "graph-database",
    "self-hosted",
    "rush-db",
    "rush db",
    "rushdb"
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/rush-db/rushdb-python"
Repository = "https://github.com/rush-db/rushdb-python"
Documentation = "https://docs.rushdb.com"

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.280",
    "mypy>=1.4.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0.1",
    "types-python-dateutil>=2.8.19.14"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rushdb"]

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.1",
    "types-python-dateutil>=2.9.0.20241206",
    "types-requests>=2.32.0.20241016",
]
