[project]
name = "rushdb"
version = "1.14.0"
description = "RushDB Python SDK"
authors = [
    {name = "RushDB Team", email = "hi@rushdb.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "database",
    "graph database",
    "graph-database",
    "instant database",
    "instant-database",
    "instant db",
    "instant-db",
    "neo4j",
    "vector search",
    "vector-search",
    "similarity search",
    "ai",
    "ai database",
    "artificial intelligence",
    "machine learning",
    "machine-learning",
    "data science",
    "data-science",
    "rag",
    "retrieval augmented generation",
    "embedding",
    "embeddings",
    "json normalization",
    "json-normalization",
    "schema-less",
    "schemaless",
    "no-schema",
    "modern apps",
    "modern-apps",
    "web development",
    "web-development",
    "app backend",
    "app-backend",
    "etl",
    "data pipeline",
    "data-pipeline",
    "data engineering",
    "data-engineering",
    "data analysis",
    "data-analysis",
    "data management",
    "data-management",
    "persistence",
    "fractal api",
    "fractal-api",
    "self-hosted",
    "cloud",
    "rest api",
    "rest-api",
    "graph",
    "graphs",
    "relationships",
    "cypher",
    "db",
    "rush-db",
    "rush db",
    "rushdb"
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/rush-db/rushdb-python"
Repository = "https://github.com/rush-db/rushdb-python"
Documentation = "https://docs.rushdb.com"

[project.optional-dependencies]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.280",
    "mypy>=1.4.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "types-requests>=2.31.0.1",
    "types-python-dateutil>=2.8.19.14"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rushdb"]

[tool.ruff]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[dependency-groups]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.1",
    "types-python-dateutil>=2.9.0.20241206",
    "types-requests>=2.32.0.20241016",
]
